(fix): making collapsing state of sidebar on provider to use it in navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,3 +42,7 @@
     --foreground: #ededed;
   }
 }
+
+[data-sidebar="collapsed"] .layout-root {
+  flex-direction: column;
+}
